continue creating movie detail page

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -46,19 +46,19 @@
 :root {
   --radius: 0.625rem;
   --background: #2C2C2C;
-  --foreground: #ffffff;
+  --foreground: #FFFFFF;
   --card: #3D3B3B;
-  --card-foreground: #ffffff;
+  --card-foreground: #FFFFFF;
   --popover: #3D3B3B;
-  --popover-foreground: #ffffff;
+  --popover-foreground: #FFFFFF;
   --primary: oklch(0.205 0 0);
   --primary-foreground: oklch(0.985 0 0);
   --secondary: oklch(0.97 0 0);
   --secondary-foreground: oklch(0.205 0 0);
   --muted: oklch(0.97 0 0);
   --muted-foreground: oklch(0.556 0 0);
-  --accent: oklch(0.97 0 0);
-  --accent-foreground: oklch(0.205 0 0);
+  --accent: #fec86b;
+  --accent-foreground: #FFFFFF;
   --destructive: oklch(0.577 0.245 27.325);
   --border: oklch(0.922 0 0);
   --input: oklch(0.922 0 0);
