--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -53,10 +53,10 @@
   --popover-foreground: #FFFFFF;
   --primary: oklch(0.205 0 0);
   --primary-foreground: oklch(0.985 0 0);
-  --secondary: oklch(0.97 0 0);
-  --secondary-foreground: oklch(0.205 0 0);
-  --muted: oklch(0.97 0 0);
-  --muted-foreground: oklch(69.926% 0.00008 271.152);
+  --secondary: oklch(97.015% 0.00011 271.152 / 0.221);
+  --secondary-foreground: oklch(0.97 0 0);
+  --muted: oklch(69.926% 0.00008 271.152);
+  --muted-foreground: oklch(0.97 0 0);
   --accent: #fec86b;
   --accent-foreground: #FFFFFF;
   --destructive: oklch(0.577 0.245 27.325);
@@ -123,4 +123,8 @@
 
 .icon{
   @apply w-5 h-5
+}
+
+.title{
+  @apply text-xl
 }
